rust_writer_proc/tests/ui/mutator_fails_if_local_implementor_used_without_local_keyword.stderr
error[E0277]: the trait bound `Mutator<'_, EmptyMutator, 1>: ToMutate<'_, LocalImplementor<T>, _>` is not satisfied
  --> tests/ui/mutator_fails_if_local_implementor_used_without_local_keyword.rs:20:1
   |
20 | #[mutator(ItemToTrait<'a>, ItemToTrait<'a>, LocalImplementor<T: std::fmt::Debug + Clone>)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ToMutate<'_, LocalImplementor<T>, _>` is not implemented for `Mutator<'_, EmptyMutator, 1>`
   |
   = help: the following other types implement trait `ToMutate<'a, T, N>`:
             `Mutator<'_, EmptyMutator, 1>` implements `ToMutate<'_, ItemToFile, 1>`
             `Mutator<'_, EmptyMutator, 1>` implements `ToMutate<'_, ItemToImpl<'_>, 1>`
             `Mutator<'_, EmptyMutator, 1>` implements `ToMutate<'_, ItemToMod<'_>, 1>`
             `Mutator<'_, EmptyMutator, 1>` implements `ToMutate<'_, ItemToTrait<'_>, 1>`
             `Mutator<'_, EmptyMutator, 1>` implements `ToMutate<'_, NewImplementor<'_, T>, 3>`
             `Mutator<'_, EmptyMutator, 1>` implements `ToMutate<'_, TokenStreamToMacro, 1>`
   = note: this error originates in the attribute macro `mutator` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `visit_file_mut` found for struct `Mutator` in the current scope
  --> tests/ui/mutator_fails_if_local_implementor_used_without_local_keyword.rs:20:1
   |
20 | #[mutator(ItemToTrait<'a>, ItemToTrait<'a>, LocalImplementor<T: std::fmt::Debug + Clone>)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `Mutator<'_, LocalImplementor<T>, _>`
   |
   = note: this error originates in the attribute macro `mutator` (in Nightly builds, run with -Z macro-backtrace for more info)
